--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "mongoose": "^6.2.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.7",
-    "xss-clean": "^0.1.1",
-    "yarn": "^1.22.19"
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "eslint": "^7.32.0 || ^8.2.0",
